improve TV program download performance